# alfred-pyflow-cookiecutter

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
user.workflow.{{ cookiecutter.__workflow_id }}/: README.md  info.plist  pyproject.toml
user.workflow.{{ cookiecutter.__workflow_id }}/src/: main.py
{{ cookiecutter.github_repository }}/: LICENSE  info.plist  pyproject.toml
{{ cookiecutter.github_repository }}/src/: data.py  main.py
{{ cookiecutter.github_repository }}/tests/: test_main.py  test_workflow.py
