[tool.poetry]
name = "alfred-pyflow-cookiecutter"
version = "0.1.0"
description = ""
authors = ["Fede Calendino <fede@calendino.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.6.0"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
