[tool.poetry]
name = "alfred-pyflow-cookiecutter"
version = "0.1.0"
description = ""
authors = ["Fede Calendino <fede@calendino.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2"

[tool.poetry.dev-dependencies]
black = "latest"
coverage = "latest"
ddt = "latest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
